--- a/.github/workflows/docker-image-simple.yml
+++ b/.github/workflows/docker-image-simple.yml
@@ -32,7 +32,7 @@ jobs:
             cache-to: ""
           - os: "debian"
             release: "sid"
-            platforms: "linux/amd64,linux/arm64,linux/riscv64" # debian:sid is the only image with riscv64 as of 2024-03-03
+            platforms: "linux/amd64,linux/arm64" # debian:sid is the only image with riscv64 as of 2024-03-03, but is hasn't all the toolchains yet: ,linux/riscv64
             cache-from: ""
             cache-to: ""
           - os: "ubuntu"
